add tags and button href prop

--- a/demo/src/css/demo.css
+++ b/demo/src/css/demo.css
@@ -87,6 +87,7 @@ code {
   .playground.playground--side-code {
     display: table;
     width: 100%;
+    margin-bottom: 0;
   }
 
   .playground.playground--side-code .playgroundPreview {
